cabal-version:      2.4
name:               gen-tm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             Joey Velez-Ginorio
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
build-type:         Custom

custom-setup
  setup-depends:    base
                  , Cabal
                  , cabal-doctest >= 1 && <1.1

library
  exposed-modules:  Language.STLC
                  , Language.STLC.Gen
                  , Language.STLC.Gen2
                  , Language.STLC.Sample
                  , Language.CL
                  , Language.STLC2CL
                  , Paths_gen_tm
  autogen-modules:  Paths_gen_tm
  build-depends:    MemoTrie >= 0.6.10
                  , aeson >= 1.5.6.0
                  , base
                  , bytestring >= 0.10.12.0
                  , containers
                  , dlist >= 1.0
                  , hedgehog
                  , logict >= 0.7.0.3
                  , mmorph
                  , monad-dijkstra
                  , mtl
                  , optparse-applicative >= 0.16.1.0
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-safe >= 2.3.3
                  , text >= 1.2.4.1
                  , transformers
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2

executable gen-tm
  main-is:          Main.hs
  other-modules:    Dataset
                  , Paths_gen_tm
  autogen-modules:  Paths_gen_tm
  hs-source-dirs:   exe
  build-depends:    MemoTrie >= 0.6.10
                  , aeson
                  , base
                  , bytestring >= 0.10.12.0
                  , dlist >= 1.0
                  , gen-tm
                  , hedgehog
                  , logict >= 0.7.0.3
                  , mtl
                  , optparse-applicative
                  , optparse-applicative >= 0.16.1.0
                  , pipes
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-bytestring
                  , pipes-safe
                  , pipes-safe >= 2.3.3
                  , text
                  , transformers
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2 -threaded -rtsopts -prof -fexternal-interpreter

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Language.STLCSpec
                  , Language.STLC2CLSpec
  build-depends:    MemoTrie >= 0.6.10
                  , QuickCheck
                  , base
                  , base
                  , bytestring >= 0.10.12.0
                  , containers
                  , dlist >= 1.0
                  , gen-tm
                  , hedgehog
                  , hedgehog-quickcheck
                  , hspec
                  , hspec-hedgehog
                  , logict >= 0.7.0.3
                  , mmorph
                  , mtl
                  , optparse-applicative >= 0.16.1.0
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-safe >= 2.3.3
                  , text
                  , transformers
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   doctests
  x-doctest-options:
                    --no-magic
  main-is:          Doctests.hs
  build-depends:    MemoTrie >= 0.6.10
                  , base
                  , bytestring >= 0.10.12.0
                  , dlist >= 1.0
                  , doctest
                  , logict >= 0.7.0.3
                  , optparse-applicative >= 0.16.1.0
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-safe >= 2.3.3
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
