cabal-version:      2.4
name:               gen-tm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             Joey Velez-Ginorio
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
build-type:         Custom

custom-setup
  setup-depends:    base
                  , Cabal
                  , cabal-doctest >= 1 && <1.1

library
  exposed-modules:  Control.Monad.Fresh
                  , Language.STLC1
                  , Language.STLC2
                  , Language.STLC2.Gen
                  , Language.STLC2.Sample
                  , Language.STLC2.ToCL
                  , Language.CL
                  , Paths_gen_tm
  autogen-modules:  Paths_gen_tm
  build-depends:    aeson >= 1.5.6.0
                  , base
                  , bytestring >= 0.10.12.0
                  , containers
                  , hedgehog
                  , mmorph
                  , monad-dijkstra
                  , mtl
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-bytestring >= 2.1.7
                  , pipes-safe >= 2.3.3
                  , pipes-safe >= 2.3.3
                  , template-haskell
                  , text >= 1.2.4.1
                  , transformers
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2

executable gen-tm
  main-is:          Main.hs
  other-modules:    Dataset
                  , Opts
                  , Paths_gen_tm
  autogen-modules:  Paths_gen_tm
  hs-source-dirs:   exe
  build-depends:    aeson
                  , base
                  , bytestring >= 0.10.12.0
                  , gen-tm
                  , hashable
                  , hedgehog
                  , mtl
                  , optparse-applicative
                  , pipes
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-bytestring
                  , pipes-bytestring >= 2.1.7
                  , pipes-safe
                  , pipes-safe >= 2.3.3
                  , pipes-safe >= 2.3.3
                  , text
                  , transformers
                  , unordered-containers
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2 -threaded -rtsopts

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Language.STLC2Spec
                  , Language.STLC2.ToCLSpec
  build-depends:    QuickCheck
                  , base
                  , base
                  , bytestring >= 0.10.12.0
                  , containers
                  , gen-tm
                  , hedgehog
                  , hedgehog-quickcheck
                  , hspec
                  , hspec-hedgehog
                  , mmorph
                  , mtl
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-bytestring >= 2.1.7
                  , pipes-safe >= 2.3.3
                  , pipes-safe >= 2.3.3
                  , text
                  , transformers
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   doctests
  x-doctest-options:
                    --no-magic
  main-is:          Doctests.hs
  build-depends:    base
                  , bytestring >= 0.10.12.0
                  , doctest
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes >= 4.3.16
                  , pipes-bytestring >= 2.1.7
                  , pipes-safe >= 2.3.3
                  , pipes-safe >= 2.3.3
  default-language: Haskell2010
  ghc-options:      -W -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
